Fix hr padding (now everything aligns).

--- a/css/layout.css
+++ b/css/layout.css
@@ -17,3 +17,8 @@ p {
   margin-top: 21px;
   margin-bottom: 21px;
 }
+
+hr {
+    height: 1px;
+    margin: 0 0 20px;
+}
